# personal-portfolio-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  insignia_chunk.py  minimal_chat.py  pyproject.toml  reindex_data.py  run.py  simple_chat.py  test_all_scores.py  test_api.py  test_chat.py  test_debug.py  test_debug_search.py  test_direct.py  test_final.py  test_rag.py  test_search.py  test_search_debug.py.py  test_search_direct.py  test_search_insignia.py  test_specific_query.py  verify_index.py
.github/workflows/: ci-master.yml
qdrant_data/: raft_state.json
qdrant_data/collections/documents/0/: newest_clocks.json  replica_state.json
qdrant_data/collections/documents/0/segments/0a595752-75ac-47a8-9bb6-88a74e023eac/: mutable_id_tracker.mappings
qdrant_data/collections/documents/0/segments/0a595752-75ac-47a8-9bb6-88a74e023eac/payload_index/: IDENTITY  LOG  MANIFEST-000077  MANIFEST-000081
qdrant_data/collections/documents/0/segments/adab247f-1fc5-43aa-a4e7-591ddf45e3e5/payload_index/: IDENTITY  LOG  MANIFEST-000079  MANIFEST-000083
src/adapters/: __init__.py  llm.py  llm_adapter.py  openrouter.py
src/application/api/auth/: __init__.py
src/application/api/chat/: __init__.py
src/application/api/upload/: __init__.py
src/application/frontend/: streamlit_app.py
src/application/rag/: __init__.py
src/common/: __init__.py  constants.py  exceptions.py  prompts.py
src/configs/: configs.py  middleware.py
src/entrypoints/: main_app.py
src/modules/: llm_modules.py  simple_memory.py
src/schemas/: auth.py  chat.py
