[project]
name = "personal-portfolio-ai"
version = "0.1.0"
description = "A chat API using External AI"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi>=0.104.1",
    "granian[reload]>=0.1",
    "httpx>=0.25.2",
    "pydantic>=2.5.2",
    "python-multipart>=0.0.9",
    "loguru>=0.7.3",
    "numpy>=1.26.4",
    "pymupdf>=1.25.5",
    "qdrant-client>=1.13.3",
    "sentence-transformers==4.0.2",
    "transformers==4.47.0",
    "torch==2.5.1",
    "itsdangerous>=2.2.0",
    "langchain>=0.3.23"
]

requires-python = ">=3.12"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 79
target-version = "py312"

# Enable rules
lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
]

lint.ignore = ["E501"]  # Line too long

# Configure isort rules
lint.isort.known-first-party = ["src"]
lint.isort.combine-as-imports = true
lint.isort.split-on-trailing-comma = true

exclude = [".env", ".venv", "venv", "notebooks"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
filterwarnings = ["error"]
